修复验证测试生成和动态标识符改写